--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="main-container">
 
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="http://www.michael-cordero.com/">
         <div class="home"></div>
       </a>
       <ul class="navbar-nav ms-auto">
