update design and add responsiveness for mobile devices

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
       <div class="col-xl-7 right-container">
         <div class="button-control">
-          <h1 class="one-liner">Need an anime to watch? Hit that button.</h1>
-          <button type="button" class="btn btn-outline-dark btn-lg btn-color" id="button" name="button">Generate</button>
+          <h1>Need an anime to watch? Hit that button.</h1>
+          <button type="button" class="btn btn-outline-dark btn-lg" id="button" name="button">Generate</button>
         </div>
       </div>
     </div>
