--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-  <title>Random Anime Generator</title>
+  <title>KIGEN</title>
 </head>
 
 <body>
@@ -31,9 +31,8 @@
 
       <div class="col-xl-5 left-container">
         <div class="title">
-          <h1 class="top-text">ランダム</h1>
-          <h1 class="mid-text">ANIME</h2>
-          <h1 class="bot-text">GENERATOR</h1>
+          <h1 class="top-text">KIGEN</h1>
+          <h3 class="mid-text">RANDOM ANIME GENERATOR</h3>
           <div class="circle"></div>
         </div>
       </div>
